default/frigate/frigate-noauth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/name: frigate
  name: frigate-noauth
spec:
  rules:
  - host: frigate.miethe.us
    http:
      paths:
      - path: /.*/best\.jpg
        backend:
          serviceName: frigate
          servicePort: http
  tls:
  - hosts:
    - frigate.miethe.us
